# kanacheck2

./: .gitignore  Cargo.toml  README.md
src/: args.rs  config.rs  main.rs
src/commands/: check.rs  config.rs
