[package]
name = "kanacheck2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "io-util", "sync"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
